# cookiecutter-api

./: .gitignore  .pre-commit-config.yml  .releaserc.yml  cookiecutter.json  mkdocs.yml  package.json  pyproject.toml
.circleci/: config.yml
docs/: index.md
hooks/: post_gen_project.sh
postgres/: Dockerfile  rds-role-setup.sql
{{ cookiecutter.project_name }}/: .pre-commit-config.yml  Dockerfile  alembic.ini  entrypoint.py  logconfig.yml  pyproject.toml
{{ cookiecutter.project_name }}/app/: __init__.py  _logging.py  config.py  main.py
{{ cookiecutter.project_name }}/app/db/: base.py
{{ cookiecutter.project_name }}/app/dependencies/: auth.py  db.py
{{ cookiecutter.project_name }}/schemas/auth/: jwt.py
