[tool.poetry]
name = "cookiecutter-api"
version = "0.0.1"
description = "Cookiecutter for new API services"
authors = ["Ric <ric@sylvera.io>"]
readme = "README.md"
packages = [{include = "cookiecutter_api"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-cinder = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
